--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,6 +25,9 @@ jobs:
       
       - name: Install http-server   # Step 4: Install Http-server
         run: npm install -g http-server
+      
+      - name: Install monocart Reporter
+        run: npm list monocart-reporter || npm install --save-dev monocart-reporter
 
       - name: Install Playwright Browsers  # Step 4: Install browsers
         run: npx playwright install --with-deps
