--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -39,6 +39,6 @@ jobs:
         if: always()  # Upload even if tests fail
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
-          path: playwright-report/
+          name: monocart-report
+          path: monocart-report/
           retention-days: 5
