--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 node_modules/
 /test-results/
 /playwright-report/
+/monocart-report/
 /blob-report/
 /playwright/.cache/
 /tests/example.spec.ts-snapshots
